--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,30 @@
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	</head>
 	<title>MCQ</title>
-	<body ng-app>
-		Nothing here {{'yet' + '!'}}
+	<body ng-app="MCQ">
+		<nav class="navbar navbar-default">
+		  <div class="container-fluid">
+		    <div class="navbar-header">
+		      <a class="navbar-brand" href="#">Tanituts MCQ</a>
+		    </div>
+		    <ul class="nav navbar-nav">
+		      <li class="active"><a href="#">Home</a></li>
+		    </ul>
+		  </div>
+		</nav>
+		This is {{ 'Rachit' + 'Bhasin' }}
+		<ui-view></ui-view>
 	</body>
 	<footer>
-		<!-- Latest compiled and minified JavaScript -->
+		<!-- Jquery -->
+		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+		
+		<!-- Boostrap JavaScript -->
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js"type="text/javascript"></script>
+		
+		<!-- AngularJS -->
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js" type="text/javascript"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js" type="text/javascript"></script>
+		<script src="./app.js" type="text/javascript"></script>
 	</footer>
 </html>
