--- a/app/index.html
+++ b/app/index.html
@@ -34,10 +34,13 @@
 		<!-- Bootstrap JavaScript -->
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 		
+		<!-- Ace JS -->
+		<script src="http://rawgit.com/ajaxorg/ace-builds/v1.2.8/src-min-noconflict/ace.js" type="text/javascript"></script>
+
 		<!-- AngularJS -->
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js" type="text/javascript"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js" type="text/javascript"></script>
-
+		<script src="./assets/js/ui-ace.min.js" type="text/javascript"></script>
 		<script src="./app.js" type="text/javascript"></script>
 		<script src="./controllers/home/index.js" type="text/javascript"></script>
 		<script src="./controllers/create/index.js" type="text/javascript"></script>
