--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,9 @@
 		<!-- Ace JS -->
 		<script src="http://rawgit.com/ajaxorg/ace-builds/v1.2.8/src-min-noconflict/ace.js" type="text/javascript"></script>
 
+		<!-- Script can be used to enable features like enableBasicAutocompletion, enableLiveAutocompletion and enableSnippets -->
+		<!--<script src="http://rawgit.com/ajaxorg/ace-builds/v1.2.8/src-min-noconflict/ext-language_tools.js" type="text/javascript"></script>-->
+
 		<!-- AngularJS -->
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js" type="text/javascript"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js" type="text/javascript"></script>
