--- a/app/index.html
+++ b/app/index.html
@@ -42,11 +42,23 @@
 
 		<!-- AngularJS -->
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js" type="text/javascript"></script>
+		<!-- ui-router -->
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.min.js" type="text/javascript"></script>
+
+		<!-- ui-ace editor -->
 		<script src="./assets/js/ui-ace.min.js" type="text/javascript"></script>
+
+		<!-- Angular main module -->
 		<script src="./app.js" type="text/javascript"></script>
+
+		<!-- Controllers -->
 		<script src="./controllers/home/index.js" type="text/javascript"></script>
 		<script src="./controllers/create/index.js" type="text/javascript"></script>
+
+		<!-- Services -->
+		<script src="./shared/services/mcq.service.js" type="text/javascript"></script>
+
+		<!-- Filters -->
 		<script src="./shared/filters/capitalize.filter.js" type="text/javascript"></script>
 	</footer>
 </html>
