--- a/app/controllers/create/index.html
+++ b/app/controllers/create/index.html
@@ -5,10 +5,12 @@
 		<!-- <div>{{mcqForm.title | json}}</div> -->
 		<div class="w10 fixed_button_group">
 			<div class="col-xs-12 form-group">
-				<button class="form-control btn btn-primary" x:ng:click="onAddClicked($event)"> Add </button>	
+				<md-button class="md-raised md-cornered md-primary" 
+					x:ng:click="onAddClicked($event)">Add</md-button>	
 			</div>
 			<div class="col-xs-12 form-group">
-				<button class="form-control btn btn-success" x:ng:click="onSaveClicked($event)"> Save </button>
+				<md-button class="md-raised md-cornered md-success" 
+					x:ng:click="onSaveClicked($event)">Save</md-button>	
 			</div>
 		</div>
 		<div class="w90">
