--- a/app/controllers/home/index.html
+++ b/app/controllers/home/index.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<md-button class="md-raised md-primary" x:ng:click="gotoState('create')">Create Quiz</md-button>
 		</div>	
-		<div class="row" x:ng:repeat="mcq in mcqList track by $index">
+		<!-- <div class="row" x:ng:repeat="mcq in mcqList track by $index">
 			<div class="col-xs-5">
 				{{mcq.title}}
 			</div>
@@ -16,6 +16,17 @@
 			<div class="col-xs-2">
 				Start
 			</div>
+		</div> -->
+		<div layout="column">
+			<div flex>First item in row 1</div>
+			<div flex>Second item in row 2</div>
+			<div flex>First item in row 3</div>
+			<div flex>Second item in row 4</div>
+			<div flex>First item in row 5</div>
+			<div flex>Second item in row 6</div>
+			<div flex>First item in row 6</div>
+			<div flex>Second item in row 7</div>
 		</div>
-	</div>
+		
+		</div>
 </section>
