--- a/app/controllers/home/index.html
+++ b/app/controllers/home/index.html
@@ -1,32 +1,26 @@
-<section class="m32">
-	<div class="container">
-		<div class="row">
-			<md-button class="md-raised md-primary" x:ng:click="gotoState('create')">Create Quiz</md-button>
-		</div>	
-		<!-- <div class="row" x:ng:repeat="mcq in mcqList track by $index">
-			<div class="col-xs-5">
-				{{mcq.title}}
-			</div>
-			<div class="col-xs-3">
-				{{mcq.technology}}
-			</div>
-			<div class="col-xs-2">
-				<button>Edit</button>
-			</div>
-			<div class="col-xs-2">
-				Start
-			</div>
+<section class="md-margin">
+	<md-content class="md-padding" layout="column">
+		<div flex-xs="" layout="row">
+			<md-button class="md-raised md-cornered md-primary" x:ng:click="gotoState('create')">Create Quiz</md-button>
+		</div>
+		<!-- <div layout="column">
+			{{mcqList | json}}
 		</div> -->
-		<div layout="column">
-			<div flex>First item in row 1</div>
-			<div flex>Second item in row 2</div>
-			<div flex>First item in row 3</div>
-			<div flex>Second item in row 4</div>
-			<div flex>First item in row 5</div>
-			<div flex>Second item in row 6</div>
-			<div flex>First item in row 6</div>
-			<div flex>Second item in row 7</div>
+
+		<div flex-xs="" flex-wrap layout="row" layout-wrap>
+			<md-card x:ng:repeat="mcq in mcqList track by $index">
+			  <img x:ng:src="{{'http://lorempixel.com/output/abstract-q-c-180-120-'+ ($index+1) % 10 + '.jpg'}}" class="md-card-image" alt="image caption">
+			  <md-card-title>
+			    <md-card-title-text>
+			      <span class="md-headline">{{::mcq.title}}</span>
+			      <span class="md-subhead">{{::mcq.technology}}</span>
+			    </md-card-title-text>
+			  </md-card-title>
+			  <md-card-actions layout="row" layout-align="start center">
+			    <md-button>Edit</md-button>
+			    <md-button>Take</md-button>
+			  </md-card-actions>
+			</md-card>
 		</div>
-		
-		</div>
+	</md-content>
 </section>
