--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
 		<script src="./app.js" type="text/javascript"></script>
 
 		<!-- Controllers -->
-		<script src="./controllers/home/index.js" type="text/javascript"></script>
+		<script src='./controllers/home/index.js' type="text/javascript"></script>
 		<script src="./controllers/create/index.js" type="text/javascript"></script>
 
 		<!-- Services -->
