--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
 		<!-- Controllers -->
 		<script src='./controllers/home/index.js' type="text/javascript"></script>
 		<script src="./controllers/create/index.js" type="text/javascript"></script>
+		<script src="./controllers/update/index.js" type="text/javascript"></script>
 
 		<!-- Services -->
 		<script src="./shared/services/mcq.service.js" type="text/javascript"></script>
