Implemented edit mcq feature

--- a/app/controllers/home/index.html
+++ b/app/controllers/home/index.html
@@ -14,7 +14,7 @@
 			    </md-card-title-text>
 			  </md-card-title>
 			  <x:md:card:actions layout="row" layout-align="end center">
-			    <x:md:button class="md-raised md-cornered md-accent" x:ng:click="gotoState('update')">Edit</x:md:button>
+			    <x:md:button class="md-raised md-cornered md-accent" ui-sref="update({index: $index})">Edit</x:md:button>
 			    <x:md:button class="md-raised md-cornered md-primary">Take</x:md:button>
 			  </x:md:card:actions>
 			</md-card>
