--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,9 @@
   		
   		<!-- Angular Material style sheet -->
   		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+
+		<!-- http://google.github.io/material-design-icons/ -->
+  		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		
 		<base href="/">
 	</head>
