Added take mcq feature

--- a/app/controllers/home/index.html
+++ b/app/controllers/home/index.html
@@ -15,7 +15,7 @@
 			  </md-card-title>
 			  <x:md:card:actions layout="row" layout-align="end center">
 			    <x:md:button class="md-raised md-cornered md-accent" ui-sref="update({index: $index})">Edit</x:md:button>
-			    <x:md:button class="md-raised md-cornered md-primary">Take</x:md:button>
+			    <x:md:button class="md-raised md-cornered md-primary"  ui-sref="take({index: $index})">Take</x:md:button>
 			  </x:md:card:actions>
 			</md-card>
 		</div>
