--- a/app/controllers/take/index.html
+++ b/app/controllers/take/index.html
@@ -27,6 +27,7 @@
 				<div class="row mt8">
 					<md-radio-group class="md-primary"
 						required
+						ng-disabled="mcqData.isSubmitted"
 						x:ng:model="question.attemptedAnswer">
 						<div class="col-xs-6 form-group" 
 							x:ng:repeat="answer in question.answers track by $index">
@@ -35,8 +36,14 @@
 							>
 								<div class="cross-button-position" x:ng:if="mcqData.isSubmitted">
 									<md-button class="md-icon-button md-button md-ink-ripple">
-										<md-icon class="material-icons"
-											x:ng:class="mcqData.isSubmitted ? $index === question.correctAnswer ? 'color-green' : 'color-red' : ''"
+										<md-icon class="material-icons color-green"
+											x:ng:if="mcqData.isSubmitted && $index === question.correctAnswer"
+											layout-right
+										>
+											done
+										</md-icon>
+										<md-icon class="material-icons color-red"
+											x:ng:if="mcqData.isSubmitted && $index !== question.correctAnswer"
 											layout-right
 										>
 											close
@@ -53,8 +60,8 @@
 					</md-radio-group>
 				</div>
 
-				<div class="row" x:ng:form="questionForm">
-					<div class="col-xs-4 form-group" >
+				<div class="row" x:ng:if="mcqData.isSubmitted" >
+					<div class="col-xs-12 form-group" >
 						<label for="link" x:ng:bind="question.link"></label>
 					</div>
 				</div>
@@ -63,9 +70,10 @@
 				</div>
 			</div>
 		</div>
+		
 		<md-button aria-label="Submit"
-			class="md-raised md-cornered md-primary" 
-			x:ng:click="onSubmitClicked($event)">Submit</md-button>	
+				class="md-raised md-cornered md-primary" 
+				x:ng:click="onSubmitClicked($event)">Submit</md-button>	
 	</form>		
 </section>
 
