--- a/app/controllers/take/index.html
+++ b/app/controllers/take/index.html
@@ -32,9 +32,9 @@
 						<div class="col-xs-6 form-group" 
 							x:ng:repeat="answer in question.answers track by $index">
 							<div layout="row" 
-								x:ng:class="mcqData.isSubmitted ? $index === question.attemptedAnswer ? 'correct-answer' : 'incorrect-answer' : ''"
+								x:ng:class="mcqData.isSubmitted && ($index === question.attemptedAnswer || $index === question.correctAnswer) ? question.correctAnswer === $index ? 'correct-answer' : 'incorrect-answer' : ''"
 							>
-								<div class="cross-button-position" x:ng:if="mcqData.isSubmitted">
+								<div class="cross-button-position" x:ng:if="mcqData.isSubmitted && ($index === question.attemptedAnswer || $index === question.correctAnswer)">
 									<md-button class="md-icon-button md-button md-ink-ripple">
 										<md-icon class="material-icons color-green"
 											x:ng:if="mcqData.isSubmitted && $index === question.correctAnswer"
@@ -66,7 +66,9 @@
 					</div>
 				</div>
 				<div>
-					{{question | json}}
+					{{"Correct: " + question.correctAnswer}}
+					<br>
+					{{"Attempted: " + question.attemptedAnswer}}
 				</div>
 			</div>
 		</div>
